/*

Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0

*/

syntax = "proto3";

option go_package = "github.com/hyperledger/fabric/protos/orderer/bftsmart";
option java_package = "org.hyperledger.fabric.protos.orderer.bftsmart";

package bftsmart;

// ConfigMetadata is serialized and set as the value of ConsensusType.Metadata in
// a channel configuration when the ConsensusType.Type is set "bftsmart".
message ConfigMetadata {
    repeated Consenter consenters = 1;
    Options options = 2;
}

// Consenter represents a consenting node (i.e. replica).
message Consenter {
    uint32 consenter_id = 1;
    string host = 2;
    uint32 port = 3;
    bytes identity = 4; // consenter serialized identity
    bytes client_tls_cert = 5;
    bytes server_tls_cert = 6;
}

// Options to be specified for all the bftsmart nodes. These can be modified on a
// per-channel basis.
message Options {
    bytes config = 1;
}

// BlockMetadata stores data used by the BFTSMART OSNs when
// coordinating with each other, to be serialized into
// block metadata field and used after failures and restarts.
// Maintains view configuration information such as: view id,
// latest sequence number. View id need to defer the id of the
// the leader.
message BlockMetadata {
    uint64 view_id = 1;
    uint64 latest_sequence = 2;
}

